--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,17 @@
         </div>
     </header>
 
+    <!-- Hero -->
+    <section class="relative">
+        <div class="container flex flex-col-reverse lg:flex-row items-center gap-12 mt-14 lg:mt-28">
+            <div class="flex flex-1 flex-col items-center lg:items-start">
+                <h2 class="text-bookmark-blue text-3xl md:text-4 lg:text-5xl text-center lg:text-left mb-6">
+                    A Simple Bookmark Manager
+                </h2>
+            </div>
+        </div>
+
+    </section>
 </body>
 
 </html>
